[package]
name = "goe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum="0.6"
tokio = { version = "1", features = ["full"] }
reqwest={ version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json="1"
prometheus = "0.13.3"
once_cell = "1.17.0"



